--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -32,20 +32,20 @@
   <nav class="navbar navbar-expand-lg navbar-light theme-nav" *ngIf="!loggedUserInfo?.isLoggedIn " >
     <div class="container-fluid" *ngIf="!router?.url?.includes('/auth') && !router?.url?.includes('/user') && !router?.url?.includes('/employer')">
       <a href="#" class="navbar-brand"><img src="assets/images/logo.png"/></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ml-auto ">
+      </button> -->
+      <div class="collapse navbar-collapse" style="display: contents;"id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto "  >
            <li class="nav-item dropdown bg-white">
           <a class="btn btn-sm btn-outline-primary px-3 dropdown-toggle dropdown-toggles " href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Login</a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="margin-top:23px;">						 
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="margin-top:23px;position:absolute;">						 
             <li class="submenu"> <a class="dropdown-item" (click)="onRedirectUrl('/auth/employer/login')"  >Employer</a></li>								
             <li class="submenu"> <a class="dropdown-item" (click)="onRedirectUrl('/auth/user/login')"  >Jobseeker</a></li>								
           </ul>
           </li>
         </ul>
-        <ul class="navbar-nav ml-2">
+        <ul class="navbar-nav ml-2" style="display: contents;">
           <li class="nav-item">
           <a href="#" class="m-1 btn btn-sm btn-secondary"><i class="fab fa-linkedin-in"></i></a>
           </li>	
@@ -61,15 +61,15 @@
     <div class="container" *ngIf="router?.url?.includes('/auth') ">
       <a [routerLink]="['/']" href="javascript:;" class="navbar-brand">
         <img src="assets/images/logo.png" /></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
+      </button> -->
       <!-- <select #langSelect (change)="useLanguage(langSelect.value)" class="test-{{translateService.currentLang}}">
         <option *ngFor="let lang of translateService.getLangs()" [value]="lang"
           [selected]="lang === translateService.currentLang">{{ lang }}</option>
       </select> -->
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <div class="collapse navbar-collapse" style="display: contents;" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
         
 			 <!--<li class="nav-item" *ngIf="!router?.url?.includes('/employer') &&( !router?.url?.includes('/home')  &&  !router?.url?.includes('/login') ) " >
@@ -99,7 +99,7 @@
             </a>
           </li> -->
         </ul>
-      <ul class="navbar-nav lang-icon">
+      <ul class="navbar-nav lang-icon nav-language-66">
           <li class="dropdown test-{{translateService.currentLang}}">
             <ng-container *ngFor="let lang of translateService.getLangs()">
 
@@ -111,7 +111,7 @@
             </ng-container>
 
 
-           <ul *ngIf="isLangMenuOpen" class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" >
+           <ul *ngIf="isLangMenuOpen" style="position: absolute;" class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" >
               <ng-container *ngFor="let lang of translateService.getLangs()">
                 <li class="submenu" *ngIf="lang != translateService.currentLang">
                   <a (click)="useLanguage(lang)" class="text-capitalize dropdown-item" href="javascript:;">
@@ -131,11 +131,11 @@
   <nav class="navbar navbar-expand-lg navbar-light theme-nav" *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role && loggedUserInfo?.role?.includes(1)">
     <div class="container">
       <a  [routerLink]="['/employer/dashboard']" href="javascript:;" class="navbar-brand" ><img src="assets/images/logo.png"/></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ml-auto">
+      </button> -->
+      <div class="collapse navbar-collapse" style="display:contents;"  id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto nav-profiles">
 		<li *ngIf="!router.url.includes('/agency')" class="nav-item  my-1 d-flex" style="margin-right:10px;">
             <a (click)="navigateNotification()"
             class="py-1 px-2 d-flex align-items-center justify-content-center"
@@ -160,7 +160,7 @@
             <span class="text-capitalize">{{(currentEmployerDetails?.first_name ? currentEmployerDetails?.first_name : '') + ' ' + (currentEmployerDetails?.last_name ? currentEmployerDetails?.last_name : '')}}</span>
           </span>
           </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <ul class="dropdown-menu" style="position:absolute;" aria-labelledby="navbarDropdownMenuLink">
             <li class="submenu"> <a [routerLink]="['/employer/dashboard']" class="dropdown-item" href="javascript:;">{{"header.dashboard" | translate}}</a></li>
             <li class="submenu"> <a [routerLink]="['/employer/profile']" class="dropdown-item" href="javascript:;">{{"header.profile" | translate}}</a></li>
             <li class="submenu"> <a [routerLink]="['/notification']" class="dropdown-item" href="javascript:;">{{"header.notification" | translate}}</a></li>
@@ -169,7 +169,7 @@
           </ul>
           </li>
         </ul>
-        <ul class="navbar-nav lang-icon">
+        <ul class="navbar-nav lang-icon nav-language-80" >
           <li class="dropdown test-{{translateService.currentLang}}">
             <ng-container *ngFor="let lang of translateService.getLangs()">
 
@@ -181,7 +181,7 @@
             </ng-container>
 
 
-            <ul *ngIf="isLangMenuOpen" class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" >
+            <ul *ngIf="isLangMenuOpen" style="position: absolute;"  class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" >
               <ng-container *ngFor="let lang of translateService.getLangs()">
                 <li class="submenu" *ngIf="lang != translateService.currentLang">
                   <a (click)="useLanguage(lang)" class="text-capitalize dropdown-item" href="javascript:;">
@@ -204,12 +204,12 @@
     <div class="container">
       <a [routerLink]="['/user/dashboard']" href="javascript:;" class="navbar-brand"><img src="assets/images/logo.png"
           width="100" /></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ml-auto">
+      </button> -->
+      <div class="collapse navbar-collapse" style="display:contents;" id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto nav-profile">
           <li *ngIf="!router.url.includes('/agency')" class="nav-item  my-1 d-flex" style="margin-right:10px;">
             <a (click)="navigateNotification()"
             class="py-1 px-2 d-flex align-items-center justify-content-center"
@@ -231,7 +231,7 @@
                 <span class="text-capitalize">{{(currentUserDetails?.first_name ? currentUserDetails?.first_name : '') + ' ' + (currentUserDetails?.last_name ? currentUserDetails?.last_name : '')}}</span>
               </span>
             </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <ul class="dropdown-menu" style="position:absolute;" aria-labelledby="navbarDropdownMenuLink">
               <li class="submenu"> <a class="dropdown-item" [routerLink]="['/user/dashboard']" href="javascript:;">{{"header.dashboard" | translate}}</a></li>
               <li class="submenu"> <a class="dropdown-item" [routerLink]="['/user/create-candidate']" href="javascript:;">{{"header.profile" | translate}}</a></li>
               <li class="submenu"> <a class="dropdown-item" [routerLink]="['/notification']" href="javascript:;">{{"header.notification" | translate}}</a></li>
@@ -240,7 +240,7 @@
             </ul>
           </li>
         </ul>
-        <ul class="navbar-nav lang-icon">
+        <ul class="navbar-nav lang-icon nav-language-80">
           <li class="dropdown test-{{translateService.currentLang}}">
             <ng-container *ngFor="let lang of translateService.getLangs()">
 
@@ -251,7 +251,7 @@
             </ng-container>
 
 
-            <ul *ngIf="isLangMenuOpen" class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" >
+            <ul *ngIf="isLangMenuOpen" style="position: absolute;" class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" >
               <ng-container *ngFor="let lang of translateService.getLangs()">
                 <li class="submenu" *ngIf="lang != translateService.currentLang">
                   <a (click)="useLanguage(lang)" class="text-capitalize dropdown-item" href="javascript:;">
