--- a/frontend/src/app/modules/auth/user-auth/user-login/user-login.component.html
+++ b/frontend/src/app/modules/auth/user-auth/user-login/user-login.component.html
@@ -17,12 +17,12 @@
 <section class="section login-section">
   <div class="container">
     <div class="row">
-      <div class="col-md-8">
+      <div class="col-lg-8">
         <div class="login-content">	
         <img [src]="'assets/images/login-banner-bg.png'" class="img-fluid"/>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-lg-4">
         <!-- form -->
         <app-login-form></app-login-form>
       </div>
