--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
@@ -306,7 +306,7 @@
         <div class="title">
           <h2> {{"shared.filter" | translate }}
             <button *ngIf="customObject?.keys(utilsHelperService.clean(tempQueryParams))?.length > 2" (click)="onClearFilter()" class="btn btn-sm btn-theme-blue ml-2 float-right" type="button">
-              <i class="fa fa-times" aria-hidden="true"></i>{{"shared.clear" | translate }}
+              <i class="fa fa-times" aria-hidden="true" style="margin-right: 3px;" ></i> {{"shared.clear" | translate }}
             </button>
           </h2>
 
@@ -322,7 +322,9 @@
                 <li class="list-group-item" *ngFor="let item of experienceFilter; let i=index">
                   <div class="custom-control custom-checkbox">
                     <input type="checkbox" [checked]="onCheckExpDefault(item)" (change)="onFiltertByExperience(item)" class="custom-control-input" id="experienceCheck_{{i}}">
-                    <label class="custom-control-label" for="experienceCheck_{{i}}">{{item?.text}} </label>
+                    <label class="custom-control-label" for="experienceCheck_{{i}}" *ngIf="item?.value?.min ==0">{{"shared.fresher" | translate }}</label>
+                    <label class="custom-control-label" for="experienceCheck_{{i}}" *ngIf="item?.value?.min !=0 && item?.value?.max !=20">{{item?.text}} {{"shared.year" | translate }}</label>
+                    <label class="custom-control-label" for="experienceCheck_{{i}}" *ngIf="item?.value?.max ==20">{{item?.text}} {{"shared.yearAbove" | translate }}</label>
                   </div>
                 </li>
               </ul>
@@ -337,7 +339,11 @@
                 <li class="list-group-item" *ngFor="let item of sharedService.onGetJobType(); let i=index">
                   <div class="custom-control custom-checkbox">
                     <input [value]="item.id" [checked]="queryParams?.job_types?.includes(item.id)" (change)="onFiltertByJobType('job_types', item.id)" type="checkbox" class="custom-control-input" id="customCheck_{{i}}">
-                    <label class="custom-control-label" for="customCheck_{{i}}">{{item.text}} </label>
+                    <label class="custom-control-label" for="customCheck_{{i}}" *ngIf="item?.id==1000">{{"shared.fullTime" | translate }} </label>
+                    <label class="custom-control-label" for="customCheck_{{i}}" *ngIf="item?.id==1001">{{"shared.partTime" | translate }} </label>
+                    <label class="custom-control-label" for="customCheck_{{i}}" *ngIf="item?.id==1002">{{"shared.contract" | translate }}</label>
+                    <label class="custom-control-label" for="customCheck_{{i}}" *ngIf="item?.id==1003">{{"shared.freelance" | translate }} </label>
+                    <label class="custom-control-label" for="customCheck_{{i}}" *ngIf="item?.id==1004">{{"shared.internship" | translate }} </label>
                   </div>
                 </li>
               </ul>
