--- a/frontend/src/app/modules/features/user/user-chart/user-chart.component.html
+++ b/frontend/src/app/modules/features/user/user-chart/user-chart.component.html
@@ -2,14 +2,14 @@
 <section class="my-4">
 	<div class="container">
 		<div class="row my-5">
-			<div class="col-lg-7">
+			<div class="col-lg-7 col-md-12">
 				<button (click)="getDataStatus('active')" [ngClass]="isActive ? 'active' : ''" type="button" class="btn btn-sm btn-outline-success rounded-pill px-3 mr-1">Active <i class="fas fa-times small ml-1" ></i></button>
 				<button (click)="getDataStatus('paused')" [ngClass]="isPaused ? 'active' : ''"  type="button" class="btn btn-sm btn-outline-info rounded-pill px-3 mr-1 ">Paused <i class="fas fa-times small ml-1"></i></button>
 				<button (click)="getDataStatus('closed')" [ngClass]="isClosed ? 'active' : ''"  type="button" class="btn btn-sm btn-outline-warning rounded-pill px-3 mr-1">Closed <i class="fas fa-times small ml-1"></i></button>
 				<button (click)="getDataStatus('deleted')" [ngClass]="isDeleted ? 'active' : ''"  type="button" class="btn btn-sm btn-outline-danger rounded-pill px-3 mr-1">Deleted <i class="fas fa-times small ml-1"></i></button>
 			</div>
-			<div class="col-lg-5 clearfix">
-				<div id="multiDate" class="float-right">
+			<div class="col-lg-5 col-md-12 mt-time clearfix">
+				<div id="multiDate" class="float-right multi-date">
 					<i class="fas fa-calendar-alt"></i>&nbsp;
 					<input type="text" style="width: 260px;background: #fbfbfb;border: none;
     outline: none;" readonly name="daterangeInput" daterangepicker  (selected)="selectedDate($event)" 
