Bug Fixing Design Issues

--- a/frontend/src/app/modules/auth/employer-auth/employer-login/employer-login.component.html
+++ b/frontend/src/app/modules/auth/employer-auth/employer-login/employer-login.component.html
@@ -12,7 +12,7 @@
           <li class="layer" style="width:110%;"  data-depth="0.3"><img src="assets/images/sapw-newbanner-content-img5.png" class="img-fluid"></li>
         </ul>
       </div>
-      <div class="col-md-4">
+      <div class="col-lg-4 col-md-12">
         <!-- form -->
         <app-login-form></app-login-form>
       </div>
