--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -146,7 +146,7 @@
 			  <span class="bell-spans" id="notifi_count" style="display:none;">0</span>
             </a>
           </li>
-          <li class="nav-item" style="margin-top: 10px;">
+          <li class="nav-item val-hide" style="margin-top: 10px;">
           <a  [class.disabled]="router?.url?.includes('/create-profile') && !currentCompanyDetails?.email_id"  class="btn btn-outline-blue btn-sm" [routerLink]="['/employer/post-job']" routerLinkActive="router-link-active" ><i class="fab fa-telegram-plane"></i> {{"home.postJob" | translate}}</a>
           </li>
         </ul>
