--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
@@ -1,7 +1,7 @@
 <section class="sub-header">
   <div class="container">
     <div class="row">
-      <div class="col-lg-5 d-flex align-items-center">
+      <div class="col-lg-5 col-md-5 col-sm-5 d-flex align-items-center">
        <!--  <button (click)="onRedirectBack();" type="button" class="btn btn-outline-green btn-sm mr-1">
           <i class="fas fa-arrow-left"></i>
         </button> -->
@@ -13,7 +13,7 @@
           </li>
         </ol>
       </div>
-      <div class="col-lg-7 clearfix">
+      <div class="col-lg-7 col-md-7 col-sm-7 clearfix">
       </div>
     </div>
   </div>
@@ -33,19 +33,19 @@
             <div class="card job-card">
               <div class="card-body">
                 <div class="row">
-                  <div class="col-lg-7">
+                  <div class="col-lg-7 col-md-12 col-sm-12">
                     <h5 class="text-capitalize">
                       {{postedJobsDetails?.title}}
                     </h5>
                   </div>
-                  <div class="col-lg-5 ">
+                  <div class="col-lg-5 col-md-12 col-sm-12 ">
                     <a *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(1) && postedJobsDetails?.status != 0 " class="btn btn-outline-warning btn-sm mr-1" [routerLink]="['/employer/post-job']" [queryParams]="{id: postedJobsDetails?.id}" href="javascript:;" title="Edit"><i class="fas fa-pencil-alt"></i> {{"shared.edit" | translate}}</a>
                     <a class="btn btn-outline-blue btn-sm mr-1" href="javascript:;" (click)="onToggleJDModal(true)"><i class="fas fa-file-alt"></i> {{"shared.description" | translate}}</a>
                     <a *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(1) && postedJobsDetails?.status != 0" class="btn btn-outline-green btn-sm" [routerLink]="['/employer/dashboard']" [queryParams]="{activeTab: 'matches', id: postedJobsDetails?.id}" href="javascript:;" title="Matches"><i class="fas fa-tasks"></i> {{"tabs.matches" | translate}}</a>
                   </div>
                 </div>
 				<div class="row mt-2">
-                <div class="media col-lg-7">
+                <div class="media col-lg-7 col-md-7 col-sm-7">
                   <div class="media-body">
                     <h6>{{postedJobsDetails?.company?.company ? postedJobsDetails?.company?.company : ''}}</h6>
                     <h6 class="text-capitalize">
@@ -59,7 +59,7 @@
                     </h6>
                   </div>
                 </div>
-				<div class="col-lg-5" >
+				<div class="col-lg-5 col-md-5 col-sm-5" >
 							<ng-container *ngIf="postedJobsDetails?.salary_type == 0">
 								<h6 class="text-capitalize job-cardh6" >{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postedJobsDetails?.salary_currency)?.symbol + postedJobsDetails?.salary + '/ hr'}}</h6>
 							</ng-container>
