--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -17,7 +17,7 @@
 							</div>
 						</div>
 						<div class="row">
-						<div class="media col-lg-6">
+						<div class="media col-lg-6 col-md-6">
 							<div class="media-body">
 								<h6 class="text-capitalize">{{profileInfo?.details?.company}}</h6>
 								<h6 class="text-capitalize">
@@ -29,7 +29,7 @@
 								</h6>
 							</div>
 						</div>
-						<div class="col-lg-6" style="text-align: right;">
+						<div class="col-lg-6 col-md-6" style="text-align: right;">
 							<ng-container *ngIf="postJobForm?.value?.jobInfo?.salary_type == 0">
 								<h6 class="text-capitalize job-cardh6">{{"shared.salary" | translate}} : {{sharedService.onGetCurrencyCode(postJobForm?.value?.jobInfo?.salary_currency)?.symbol + postJobForm?.value?.jobInfo?.salary + ' / hr'}}</h6>
 							</ng-container>
