--- a/frontend/src/app/modules/features/employer/post-job/screening-process/screening-process.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/screening-process/screening-process.component.html
@@ -1,6 +1,6 @@
 <div formGroupName="screeningProcess">
 	<div class="row mt-5">	
-		<div class="col-lg-12 mb-4">
+		<div class="col-lg-12 col-md-12 mb-4">
 			<h6>
 				{{"shared.add" | translate}} {{"shared.screeningProcess" | translate}}
 				<span class="required-asterisk">*</span>
@@ -9,7 +9,7 @@
 	</div>
 	<div class="col-lg-12" *ngIf="screeningProcess && screeningProcess.length && t.controls.length == 0 ">
 		<div class="row mt-3 mb-3">
-			<div class="col-lg-3 col-md-6 sidebar-widgets" *ngFor="let items of screeningProcess;let i=index">
+			<div class="col-lg-3 col-md-12 sidebar-widgets" *ngFor="let items of screeningProcess;let i=index">
 				<div class="text-left">
 					<div class=" form-group">
 						<div class="custom-control custom-checkbox mb-2">
@@ -18,10 +18,10 @@
 						</div>
 					</div>
 					<div class="row mt-3 mb-3" *ngFor="let items of items;let i=index">
-						<div class="col-lg-2 col-md-3 text-left">
+						<div class="col-lg-2 col-md-4 text-left">
 							<h6 class="font-weight-bold">{{i+1}}.</h6> 
 						</div>	
-						<div class="col-lg-10 col-md-9 text-left">
+						<div class="col-lg-10 col-md-8 text-left">
 							<h6>{{items.title}}</h6>
 						</div>	
 					</div>
@@ -31,19 +31,19 @@
 	</div>
 		<div class="row mt-2" *ngFor="let ticket of t.controls; let i = index; let last = last">
 			<ng-container [formGroup]="ticket">
-				<div class="col-lg-4 col-md-5">
+				<div class="col-lg-4 col-md-6">
 					<div class="my-1">
 						<h6><span>{{i+1}}. </span> {{ticket.value.title}}</h6>
 					</div>
 				</div>
-				<div class="col-lg-2 col-md-5">
+				<div class="col-lg-2 col-md-4">
 					<button type="button" class="text-danger btn btn-small"
 						style="line-height: 1.75; padding: .5rem 1.0rem;border:none;" (click)="onRemove(i)"><i class="fas fa-times"></i></button>
 				</div>
 			</ng-container>
 		</div>
 		<div class="row mt-2" >
-			<div class="col-lg-5 col-md-4">
+			<div class="col-lg-5 col-md-6">
 				<input formControlName="temp_screening_process" maxlength="40" class="form-control mt-4" type="text" placeholder="Screening {{t.value.length}}">
 			</div>
 			<div class="col-lg-5 col-md-4" style="top: 25px;">
