--- a/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
+++ b/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
@@ -100,7 +100,7 @@
         </div>
         <div class="col-lg-4 mt-4 mt-4" style="z-index: 1;">
           <div class="upload-box">
-            <div class="box text-center upload-image">
+            <div class="box text-center upload-image uploads-image">
               <img *ngIf="(defaultProfilePic || employerDetails?.photo !='default.png')"
                 [src]="defaultProfilePic ? convertToImage(defaultProfilePic) : employerDetails?.meta?.photo?.path+'/'+ employerDetails?.meta?.photo?.folder+'/'+employerDetails?.meta?.photo?.sizes?.medium+'/'+employerDetails?.photo+'?v='+ randomNum"
                 alt="upload-photo" class="img-fluid mx-auto rounded-circle border border-primary"
@@ -120,7 +120,7 @@
         </div>
 
 
-        <div class="col-md-8 form-group">
+        <div class="col-lg-8 col-md-12  form-group">
           <label>{{"shared.aboutUs" | translate}}</label>
           <angular-editor appMarkAsterisk formControlName="description" [config]="editorConfig"
             [placeholder]="'shared.aboutUs' | translate"></angular-editor>
@@ -135,7 +135,7 @@
           </h6>
 				</div>
 
-				<div class="col-lg-12 col-md-6 mt-2" *ngIf="show || companyProfileInfo?.social_media_link?.length > 0" [@slideInOut]>
+				<div class="col-lg-12 col-md-12 mt-2" *ngIf="show || companyProfileInfo?.social_media_link?.length > 0" [@slideInOut]>
 					<div>
 						<div class="row mt-4 mb-5">
 							<div class="col-lg-4 col-md-6">
