--- a/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
+++ b/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
@@ -67,7 +67,7 @@
 											<span class="badges" *ngIf="item?.view == false " [id]="j" >1</span>
 										</a>
 									</td>
-									<td *ngIf="(item?.short_listed == null || item?.short_listed == false) && item?.status == 1 &&  item?.job_posting?.status != 0 && item?.job_posting?.status != 3">
+									<td *ngIf="(item?.short_listed == null || item?.short_listed != false) && item?.status == 1 &&  item?.job_posting?.status != 0 && item?.job_posting?.status != 3">
 										<a class="text-success text-capitalize"  data-toggle="collapse" [href]="getIdVal(item)" (click)="stopPropagation($event,item,j);">
 											Applied 
 											<i class="fas fa-caret-down"></i>
