--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -1,6 +1,6 @@
 <div formGroupName="personalDetails">
 	<div class="row mt-5">
-		<div class="col-lg-4 col-md-6">
+		<div class="col-lg-4 col-md-12">
 			<div class=" form-group">
 				<div class="custom-control custom-checkbox mb-2">
 				  <input type="checkbox" class="custom-control-input" formControlName="entry" (change)="onChangeData()" id="customCheckRemote01">
@@ -10,21 +10,21 @@
 		</div>
 	</div>
    <div class="row mt-2">
-      <div class="col-lg-4 col-md-6">
+      <div class="col-lg-4 col-md-12">
         <div class=" form-group">
           <label>{{"shared.firstName" | translate }}</label>
           <input appMarkAsterisk formControlName="first_name" type="text" class="form-control text-capitalize" placeholder="First Name">
           <app-control-messages [control]="f['first_name']"></app-control-messages>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6">
+      <div class="col-lg-4 col-md-12">
         <div class=" form-group">
           <label>{{"shared.lastName" | translate }}</label>
           <input appMarkAsterisk formControlName="last_name" type="text" class="form-control text-capitalize" placeholder="Last Name">
           <app-control-messages [control]="f['last_name']"></app-control-messages>
         </div>
       </div>
-      <div class="col-lg-4 mt-4" style="z-index: 1;">
+      <div class="col-lg-4  col-md-12 mt-4" style="z-index: 1;">
         <div class="upload-box">
           <div class="box text-center upload-image">
             <img *ngIf="(defaultProfilePic || savedUserDetails?.photo)" [src]="defaultProfilePic ? convertToImage(defaultProfilePic) : savedUserDetails?.meta?.photo?.path+'/'+ savedUserDetails?.meta?.photo?.folder+'/'+savedUserDetails?.meta?.photo?.sizes?.medium+'/'+savedUserDetails?.photo+'?v='+ randomNum" alt="upload-photo" class="img-fluid mx-auto rounded-circle border border-primary"
@@ -41,14 +41,14 @@
       </div>
     </div>
     <div class="row mt-2">
-      <div class="col-lg-4 col-md-6">
+      <div class="col-lg-4 col-md-12">
         <div class=" form-group">
           <label>{{"shared.emailAddress" | translate }}</label>
           <input appMarkAsterisk formControlName="email" type="email" class="form-control" placeholder="username@mail.com" value="jacky-smith2010@gmail.com">
           <app-control-messages [control]="f['email']"></app-control-messages>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6">
+      <div class="col-lg-4 col-md-12">
         <div class=" form-group">
           <label>{{"shared.mobileNumber" | translate }}</label>
           <ngx-intl-tel-input (ngModelChange)="checkNumber()"
@@ -66,7 +66,7 @@
       </div>
     </div>
     <div class="row mt-2">
-      <div class="col-lg-4 col-md-6">
+      <div class="col-lg-4 col-md-12">
         <div class=" form-group">
           <label>{{"shared.city" | translate}}</label>
           <input autocomplete="disabled"  autocomplete="off" appMarkAsterisk ngx-google-places-autocomplete
@@ -75,7 +75,7 @@
           <app-control-messages [control]="f['city']"></app-control-messages>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6">
+      <div class="col-lg-4 col-md-12">
         <div class=" form-group">
           <label>{{"shared.state" | translate}}</label>
           <input autocomplete="disabled"  appMarkAsterisk formControlName="state" type="text" class="form-control text-capitalize" [placeholder]="'shared.state' | translate">
@@ -86,14 +86,14 @@
 
     </div>
     <div class="row mt-2">
-      <div class="col-lg-4 col-md-6">
+      <div class="col-lg-4 col-md-12">
         <div class=" form-group">
           <label>{{"shared.zipCode" | translate}}</label>
           <input appMarkAsterisk  OnlyNumber="true" formControlName="zipcode" type="text" class="form-control" [placeholder]="'shared.zipCode' | translate">
           <app-control-messages [control]="f['zipcode']"></app-control-messages>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6">
+      <div class="col-lg-4 col-md-12">
         <div class=" form-group">
            <label>{{"shared.country" | translate }}</label>
           <input autocomplete="disabled" appMarkAsterisk formControlName="country" type="text" class="form-control text-uppercase" placeholder="Country" style="text-transform: capitalize !important">
@@ -102,7 +102,7 @@
       </div>
     </div>
 	<div class="row mt-2">
-		<div class="col-lg-4 col-md-6">
+		<div class="col-lg-4 col-md-12">
 			<div class=" form-group">
 				<label>{{"userProfile.nationality" | translate }} </label> 
 				<select appMarkAsterisk formControlName="nationality" class="form-control" (change)="onChangeCountry($event.target.value)">
@@ -145,7 +145,7 @@
 		</div>	
 	</div>
 	  <div class="row mt-2">
-		<div class="col-lg-5 col-md-6">
+		<div class="col-lg-5 col-md-12">
 		  <div class=" form-group">
 			<label>{{"userProfile.workAuthorization" | translate }}</label>
 			<div class="mt-2">
@@ -167,7 +167,7 @@
 		</div>
 	  </div>
 	  <div class="row mt-2" *ngIf="showAuthorization" >
-		<div class="col-lg-12 col-md-6">
+		<div class="col-lg-12 col-md-12">
 			<div class=" form-group">
 				<label>{{"userProfile.selectcountry" | translate }} </label>
 				<div class="pt-2">
@@ -184,7 +184,7 @@
 		</div>
 	</div>
 	  <div class="row mt-2" *ngIf="showAuthorization" >
-		<div class="col-lg-10 col-md-6">
+		<div class="col-lg-10 col-md-12">
 			<div class=" form-group">
 				<label>{{"userProfile.othercountry" | translate }} </label> 
 				<ngx-select
@@ -244,7 +244,7 @@
 		</div>	
 	</div>
 	 <div class="row mt-5">
-		<div class="col-lg-12 col-md-6">
+		<div class="col-lg-12 col-md-12">
 		  <label>{{"userProfile.languageKnown" | translate }}</label>
 		  <div appMarkAsterisk></div>
 		</div>
@@ -276,7 +276,7 @@
 			   </ngx-select>
 			  <app-control-messages [control]="ticket['controls']['language']"></app-control-messages>
 		</div>
-		<div class="col-lg-3 col-md-4 mt-3">
+		<div class="col-lg-3 col-md-4 top-3-remove mt-3">
 			<div class="custom-control custom-checkbox mr-sm-2 custom-control-inline">
 				<input type="checkbox" style="z-index: 999999;" formControlName="read" class="custom-control-input" id="read" name="read">
 				<label class="custom-control-label" for="Read">{{"shared.read" | translate }}</label>
@@ -293,9 +293,9 @@
 
         
         <div class="col-lg-2 col-md-4">
-          <button type="button" class="btn btn-outline-danger" 
+          <button type="button" class="btn btn-outline-danger btn-lan" 
             style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemove(i)"><i class="fas fa-times"></i></button>
-          <button *ngIf="last" (click)="onDuplicate(i)" type="button" class="btn btn-outline-green "
+          <button *ngIf="last" (click)="onDuplicate(i)" type="button" class="btn btn-lan btn-outline-green "
             style="margin-left: 20px;line-height: 1.75; padding: .5rem 1.0rem;"><i class="fas fa-plus"></i></button>
         </div>
       </ng-container>
@@ -306,21 +306,21 @@
 							
 
     <div class="row mt-4">
-      <div class="col-lg-4 col-md-6">
+      <div class="col-lg-4 col-md-12">
         <h6 class="font-weight-bold mt-4 clearfix cursor-pointer" (click)="show = !show">
           {{"shared.myLinks" | translate }}<i class="fas fa-caret-down pt-3 ml-3"></i></h6>
       </div>
-      <div *ngIf="show || savedUserDetails?.social_media_link?.length > 0" [@slideInOut] class="col-lg-12 col-md-6 mt-2">
+      <div *ngIf="show || savedUserDetails?.social_media_link?.length > 0" [@slideInOut] class="col-lg-12 col-md-12 mt-2">
         <div >
           <div class="row mt-4 mb-5">
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-8">
               <div class="d-flex">
                 <div class="linkIcon in"><i class="fab fa-linkedin"></i></div>
                 <input formControlName="linkedin" type="text" class="form-control form-control-sm"
                 [placeholder]="'postYourResume.enterLinkedinUrl' | translate">
               </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-3 col-md-4">
               <div class="showhideswitch mt-2">
                 <input  formControlName="linkedinBoolen" (change)="onSetLinks('linkedin', $event?.target?.checked);" type="checkbox" name="showhideswitch" class="showhideswitch-checkbox" id="myshowhideswitch5" >
                 <label class="showhideswitch-label" for="myshowhideswitch5">
@@ -331,14 +331,14 @@
             </div>
           </div>
           <div class="row mb-5">
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-8">
               <div class="d-flex">
                 <div class="linkIcon gh"><i class="fab fa-github"></i></div>
                 <input formControlName="github" type="text" class="form-control form-control-sm"
                 [placeholder]="'postYourResume.enterGithubUrl' | translate">
               </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-3 col-md-4">
               <div class="showhideswitch mt-2">
                 <input  formControlName="githubBoolen" (change)="onSetLinks('github', $event?.target?.checked);" type="checkbox" name="showhideswitch" class="showhideswitch-checkbox" id="myshowhideswitch6" >
                 <label class="showhideswitch-label" for="myshowhideswitch6">
@@ -349,14 +349,14 @@
             </div>
           </div>
           <div class="row mb-5">
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-8">
               <div class="d-flex">
                 <div class="linkIcon yt"><i class="fab fa-youtube-square"></i></div>
                 <input formControlName="youtube" type="text" class="form-control form-control-sm"
                 [placeholder]="'postYourResume.enterYoutubeUrl' | translate">
               </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-3 col-md-4">
               <div class="showhideswitch mt-2">
                 <input formControlName="youtubeBoolen" (change)="onSetLinks('youtube', $event?.target?.checked);" [value]="true" type="checkbox" name="showhideswitch" class="showhideswitch-checkbox" id="myshowhideswitch7" >
                 <label class="showhideswitch-label" for="myshowhideswitch7">
@@ -367,14 +367,14 @@
             </div>
           </div>
           <div class="row mb-5">
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-8">
               <div class="d-flex">
                 <div class="linkIcon bl"><i class="fas fa-blog"></i></div>
                 <input formControlName="blog" type="text" class="form-control form-control-sm"
                 [placeholder]="'postYourResume.enterBlogUrl' | translate">
               </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-3 col-md-4">
               <div class="showhideswitch mt-2">
                 <input formControlName="blogBoolen" (change)="onSetLinks('blog', $event?.target?.checked);" [value]="true" type="checkbox" name="showhideswitch" class="showhideswitch-checkbox" id="myshowhideswitch8" >
                 <label class="showhideswitch-label" for="myshowhideswitch8">
@@ -385,14 +385,14 @@
             </div>
           </div>
           <div class="row mb-5">
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-8">
               <div class="d-flex">
                 <div class="linkIcon pf"><i class="fas fa-laptop-code"></i></div>
                 <input formControlName="portfolio" type="text" class="form-control form-control-sm"
                 [placeholder]="'postYourResume.enterPortfolioUrl' | translate">
               </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-3 col-md-4">
               <div class="showhideswitch mt-2">
                 <input formControlName="portfolioBoolen" (change)="onSetLinks('portfolio', $event?.target?.checked);" [value]="true" type="checkbox" name="showhideswitch" class="showhideswitch-checkbox" id="myshowhideswitch9" >
                 <label class="showhideswitch-label" for="myshowhideswitch9">
@@ -407,30 +407,30 @@
     </div>
 	
 	<div class="row mt-5">
-		<div class="col-lg-12 col-md-6">
+		<div class="col-lg-12 col-md-12">
 		  <label>{{"userProfile.addreference" | translate }}</label>
 		  <div></div>
 		</div>
 	  </div> 	
 		<div class="row mt-2" *ngFor="let ticket of r.controls; let i = index; let last = last">
 		<ng-container [formGroup]="ticket">
-			<div class="col-lg-3 col-md-6">
+			<div class="col-lg-3 col-md-3">
 				<label>Name</label>
 				<input  formControlName="name" type="text" class="form-control text-capitalize" placeholder="Please Enter the Name">
 				<app-control-messages [control]="ticket['controls']['name']"></app-control-messages>
 		  </div>
-		  <div class="col-lg-3 col-md-6">
+		  <div class="col-lg-3 col-md-3">
 				<label>Email</label>
 				<input formControlName="email" type="email"  class="form-control text-lowercase" placeholder="Please Enter the E-mail">
 				<app-control-messages [control]="ticket['controls']['email']"></app-control-messages>
 		  </div>
-		  <div class="col-lg-4 col-md-6">
+		  <div class="col-lg-4 col-md-3">
 				<label>Company Name</label>
 				<input  formControlName="company_name" type="text" class="form-control text-capitalize" placeholder="Please Enter the Company Name">
 				<app-control-messages [control]="ticket['controls']['company_name']"></app-control-messages>
 		  </div>
        
-        <div class="col-lg-2 col-md-6" style="margin-top:30px;">
+        <div class="col-lg-2 col-md-3" style="margin-top:30px;">
           <button type="button" class="btn btn-outline-danger" 
             style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemoveR(i)"><i class="fas fa-times"></i></button>
           <button *ngIf="last" (click)="onDuplicateR(i)" type="button" class="btn btn-outline-green "
